# AHost

./: Dockerfile  README.md  README_CN.md  config.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/db/: app.db
src/: config.py  database.py  models.py
src/routes/: admin.py  management.py  serve.py  showcase.py
src/services/: cloudflare_service.py  file_service.py  qr_service.py
src/utils/: logger.py
templates/: base.html  index.html  showcase.html  upload.html
templates/admin/: dashboard.html  edit.html  edit_code.html  login.html
