[project]
name = "ahost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.121.3",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "python-multipart>=0.0.20",
    "qrcode[pil]>=8.2",
    "uvicorn>=0.38.0",
]
